--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,25 @@
 .env.test.local
 .env.production.local
 
+# Environment files
+.env
+.env.production
+
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Backend
+backend/node_modules
+backend/uploads
+backend/logs
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
