Rename app title to 'ABNB Capstone' to avoid trademark issues

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Airbnb Clone",
-  "name": "Airbnb Clone",
+  "short_name": "ABNB Capstone",
+  "name": "ABNB Capstone",
   "icons": [
     {
       "src": "favicon.ico",
