--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy-test": "node test-deployment.js"
+    "deploy-test": "node test-deployment.js",
+    "start:backend": "cd backend && node server.js",
+    "server": "cd backend && npm run server"
   },
   "eslintConfig": {
     "extends": [
